--- a/bio.html
+++ b/bio.html
@@ -13,9 +13,9 @@
         <li class="nav-link"> <a href="projects.html">Projects </a> </li>
       </ul>
     </nav>
-    <div class="page-body">
+    <div class="page-body rounded-corners">
       <p> Hi! I'm Lexi. I am currently a junior at Tufts University majoring in Biopsychology and Computer Science. I enjoy ballroom dancing, dogs, baking, and painting. 
-    I am also pre-med, CPR AED certified, and I love spending time volunteering or shadowing in clinical settings. I hope to someday find a good way to combine clinical
+    I am also pre-med, and I love spending time volunteering or shadowing in clinical settings. I hope to someday combine clinical
     practice and treating patients with technical problem solving and programming. </p>
     </div>
   </body>
