add that pages are in english, fix escaped chars

--- a/bio.html
+++ b/bio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Lexi Galantino</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
