--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Lexi Galantino</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
